package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

genrule(
    name = "bundle",
    outs = ["bundle.zip"],
    srcs = [
        "LICENSE",
        "//codelab-elements:README.md",
        "//codelab-elements:all_files",
        "@prettify//:prettify",
        "@polyfill//:custom_elements",
        "@polyfill//:native_shim",
    ],
    cmd = "zip -j $@ $(SRCS)",
)

genrule(
    name = "npm_dist",
    outs = ["npm_dist.zip"],
    srcs = [
        "LICENSE",
        "package.json",
        "//codelab-elements:README.md",
        "//codelab-elements:all_files",
    ],
    cmd = "zip -j $@ $(SRCS)",
)
