package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

genrule(
    name = "bundle",
    srcs = [
        "LICENSE",
        "//codelab-elements:README.md",
        "//codelab-elements:all_files",
        "@prettify",
        "@polyfill//:custom_elements",
        "@polyfill//:native_shim",
    ],
    outs = ["bundle.zip"],
    cmd = "zip -j $@ $(SRCS)",
)

genrule(
    name = "npm_dist",
    srcs = [
        "LICENSE",
        "package.json",
        "//codelab-elements:README.md",
        "//codelab-elements:all_files",
    ],
    outs = ["npm_dist.zip"],
    cmd = "zip -j $@ $(SRCS)",
)
