load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googlecodelabs/tools/claat",
    visibility = ["//visibility:private"],
    deps = [
        "//claat/cmd:go_default_library",
        "//claat/parser/gdoc:go_default_library",
        "//claat/parser/md:go_default_library",
    ],
)

go_binary(
    name = "claat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
