package(default_visibility = ["//visibility:public"])

load("//tools:defs.bzl", "concat")

licenses(["notice"])

exports_files(["LICENSE", "README.md"])

filegroup(
    name = "all_files",
    srcs = [
        ":codelab_elements_js",
        ":codelab_elements_css",
        ":codelab_index_js",
        ":codelab_index_css",
    ],
)

genrule(
    name = "bundle",
    outs = ["bundle.zip"],
    srcs = [
        "LICENSE",
        "README.md",
        ":all_files",
        "@prettify//:prettify",
        "@polyfill//:custom_elements",
        "@polyfill//:native_shim",
    ],
    cmd = "zip -j $@ $(SRCS)",
)

genrule(
    name = "codelab_elements_js",
    outs = ["codelab-elements.js"],
    srcs = [
        "//google-codelab-analytics:google_codelab_analytics_bin",
        "//google-codelab:google_codelab_bin",
        "//google-codelab-step:google_codelab_step_bin",
        "//google-codelab-survey:google_codelab_survey_bin",
    ],
    cmd = concat("js"),
)

genrule(
    name = "codelab_elements_css",
    outs = ["codelab-elements.css"],
    srcs = [
        "//google-codelab:google_codelab_scss_bin",
        "//google-codelab-step:google_codelab_step_scss_bin",
        "//google-codelab-survey:google_codelab_survey_scss_bin",
    ],
    cmd = concat("css"),
)

genrule(
    name = "codelab_index_js",
    outs = ["codelab-index.js"],
    srcs = [
        "//google-codelab-index:google_codelab_index_bin",
    ],
    cmd = concat("js"),
)

genrule(
    name = "codelab_index_css",
    outs = ["codelab-index.css"],
    srcs = [
        "//google-codelab-index:google_codelab_index_scss_bin",
    ],
    cmd = concat("css"),
)
