load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "export.go",
        "serve.go",
        "update.go",
        "util.go",
    ],
    importpath = "github.com/googlecodelabs/tools/claat/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//claat/fetch:go_default_library",
        "//claat/parser/gdoc:go_default_library",
        "//claat/parser/md:go_default_library",
        "//claat/render:go_default_library",
        "//claat/types:go_default_library",
        "//claat/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["export_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
