load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "html.go",
        "lite.go",
        "md.go",
        "template.go",
        "tmpldata.go",
    ],
    importpath = "github.com/googlecodelabs/tools/claat/render",
    visibility = ["//visibility:public"],
    deps = [
        "//claat/parser/md:go_default_library",
        "//claat/types:go_default_library",
        "@org_golang_x_net//html:go_default_library",
        "@org_golang_x_net//html/atom:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "html_test.go",
        "template_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//claat/types:go_default_library"],
)
