load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "meta.go",
        "node.go",
    ],
    importpath = "github.com/googlecodelabs/tools/claat/types",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["meta_test.go"],
    embed = [":go_default_library"],
)
