package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

load("//codelab-elements/tools:defs.bzl",
     "closure_js_library", "closure_js_binary", "closure_js_test")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_template_library")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary", "sass_library")


filegroup(
    name = "google_codelab_about_files",
    srcs = glob([
        "*.html",
        "*.png",
    ]) + [
        ":google_codelab_about_scss_bin",
        ":google_codelab_about_bin",
    ],
)

# Codelab about section.
closure_js_library(
    name = "google_codelab_about",
    srcs = [
        "google_codelab_about.js",
        "google_codelab_about_def.js"
    ],
    deps = [
        "@io_bazel_rules_closure//closure/library",
        ":google_codelab_about_soy",
    ],
)

# Compiled version of GoogleCodelabAbout element, suitable for distribution.
closure_js_binary(
    name = "google_codelab_about_bin",
    entry_points = ["googlecodelabs.CodelabAboutDef"],
    deps = [":google_codelab_about"],
)

sass_binary(
    name = "google_codelab_about_scss_bin",
    src = "google_codelab_about.scss",
)

closure_js_template_library(
    name = "google_codelab_about_soy",
    srcs = ["google_codelab_about.soy"]
)
