package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

load("//codelab-elements/tools:defs.bzl",
     "closure_js_library", "closure_js_binary", "closure_js_test")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_template_library")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary", "sass_library")

filegroup(
    name = "google_codelab_index_files",
    srcs = glob([
        "*.html",
    ]) + [
        ":google_codelab_index_scss_bin",
        ":google_codelab_index_bin",
    ],
)

# Codelabs
closure_js_library(
    name = "google_codelab_index",
    srcs = [
        "google_codelab_index.js",
        "google_codelab_index_def.js"
    ],
    deps = [
        "@io_bazel_rules_closure//closure/library",
        ":google_codelab_index_soy",
        ":google_codelab_index_cards",
    ]
)

closure_js_library(
    name = "google_codelab_index_cards",
    srcs = [
        "google_codelab_index_cards.js",
        "google_codelab_index_cards_def.js"
    ],
    deps = [
        "@io_bazel_rules_closure//closure/library",
        ":google_codelab_index_soy",
    ]
)

# Compiled version of GoogleCodelabStep element, suitable for distribution.
closure_js_binary(
    name = "google_codelab_index_bin",
    entry_points = [
        "googlecodelabs.CodelabIndex.CardsDef",
        "googlecodelabs.CodelabIndexDef",
    ],
    deps = [":google_codelab_index"],
)

sass_library(
    name = "categories_scss",
    srcs = ["_categories.scss"],
)

sass_library(
    name = "cards_scss",
    srcs = ["_cards.scss"],
    deps = [":categories_scss"],
)

sass_library(
    name = "google_codelab_scss",
    srcs = ["google_codelab.scss"],
)

sass_binary(
    name = "google_codelab_index_scss_bin",
    src = "google_codelab_index.scss",
    deps = [":cards_scss"],
)

closure_js_template_library(
    name = "google_codelab_index_soy",
    srcs = ["google_codelab_index.soy"],
)
