load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "html.go",
        "parse.go",
        "trim.go",
    ],
    importpath = "github.com/googlecodelabs/tools/claat/parser/md",
    visibility = ["//visibility:public"],
    deps = [
        "//claat/parser:go_default_library",
        "//claat/types:go_default_library",
        "//claat/util:go_default_library",
        "@com_github_russross_blackfriday_v2//:go_default_library",
        "@org_golang_x_net//html:go_default_library",
        "@org_golang_x_net//html/atom:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["parse_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//claat/parser:go_default_library",
        "//claat/types:go_default_library",
    ],
)
